--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "azwebsitesolution",
+  "name": "investmentbias",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "@aws-sdk/client-dynamodb": "^3.259.0",
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/serialize": "^1.1.1",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@hookform/resolvers": "^2.9.10",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
+    "@next/font": "13.0.7",
+    "dotenv": "^16.0.3",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7",
+    "formik": "^2.2.9",
+    "mui-image": "^1.0.7",
+    "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-hook-form": "^7.42.1",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
